--- a/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
+++ b/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/***.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/awnion/info/blob/main/interview/coding/stock_with_baseline/stock_with_baseline.ipynb)\n",
     "\n",
     "# Stock price with baseline\n",
     "\n",
