--- a/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
+++ b/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
@@ -28,17 +28,14 @@
  "cells": [
   {
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/awnion/info/blob/main/interview/coding/stock_with_baseline/stock_with_baseline.ipynb)\n",
+    "<a href=\"https://colab.research.google.com/github/awnion/info/blob/main/interview/coding/stock_with_baseline/stock_with_baseline.ipynb\" target=\"_blank\" alt=\"Open In Colab\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"></a>\n",
     "\n",
     "# Stock price with baseline\n",
     "\n",
-    "Given two arrays A and B, both of size n.\n",
-    "\n",
+    "Given two arrays $A$ and $B$, both of size $n$.\n",
     "Array A is non-decreasing.\n",
     "\n",
-    "Minimize the value of expression B[i] - B[j] + abs( A[i] – A[j] ) for any i != j.\n",
-    "\n",
-    "Find the minimised value of the expression.\n",
+    "Find: $\\min_{0 \\leq i \\neq j < n}{\\left( B_i - B_j + \\left| A_i – A_j \\right| \\right)}$\n",
     "\n",
     "`Tags: #google #phone_interview #linear #stock_price`"
    ],
@@ -63,7 +60,8 @@
     "    return min(\n",
     "        B[i] - B[j] + abs(A[i] - A[j]) \n",
     "        for i in range(N) \n",
-    "        for j in range(N))"
+    "        for j in range(N)\n",
+    "        if i != j)"
    ]
   },
   {
@@ -72,23 +70,37 @@
     "\n",
     "Time $O(n)$ Space $O(1)$\n",
     "\n",
-    "```\n",
-    "if i < j:\n",
-    "  B[i] - B[j] + abs(A[i] - A[j]) = (B[i] - A[i]) - (B[j] - A[j])\n",
+    "### Idea\n",
     "\n",
-    "if j < i:\n",
-    "  B[i] - B[j] + abs(A[i] - A[j]) = (B[i] + A[i]) - (B[j] + A[j])\n",
+    "For `i < j`: $\n",
+    "B_i - B_j + \\left| A_i – A_j \\right| \n",
+    " = B_i - B_j + A_j – A_i \n",
+    " = (B_i - A_i) - (B_j - A_j)$\n",
     "\n",
-    "result = min(\n",
-    "    min of:\n",
-    "        min(B[i] - A[i] for all i < k) - (B[k] + A[k])\n",
-    "        or\n",
-    "        (B[k] + A[k]) - max(B[j] + A[j] for all j < k)\n",
+    "For `i > j`: $\n",
+    "B_i - B_j + \\left| A_i – A_j \\right| \n",
+    " = B_i - B_j + A_i – A_j\n",
+    " = (B_i + A_i) - (B_j + A_j)$\n",
     "\n",
-    "    for each k = 1..N-1\n",
-    ")\n",
+    "For each $k$ we can choose which is better: treat $k$ as $i$ in the equation or as $j$ (in other words: left or right direction)\n",
     "\n",
-    "```"
+    "$$\n",
+    "result = \\min_{1<k<n}{\\left(\n",
+    "    \\min_{0 \\leq j < k}{\\left( (B_k - A_k) - (B_j - A_j) \\right)},\\\n",
+    "    \\min_{0 \\leq i < k}{\\left( (B_i + A_i) - (B_k + A_k) \\right)}\n",
+    "\\right)}\n",
+    "$$\n",
+    "\n",
+    "Which is \n",
+    "\n",
+    "$$\n",
+    "result = \\min_{1<k<n}{\\left(\n",
+    "    (B_k - A_k) - \\max_{0 \\leq j < k}{(B_j - A_j)},\n",
+    "    \\min_{0 \\leq i < k}{ (B_i + A_i) } - (B_k + A_k)\n",
+    "\\right)}\n",
+    "$$\n",
+    "\n",
+    "And each $\\max_{0 \\leq j < k}{(B_j - A_j)}$ and $\\min_{0 \\leq i < k}{ (B_i + A_i) }$ can be calculated in $O(1)$ if we store their values from previous iteration $k-1$ and update by values from iteration $k$."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -106,16 +118,13 @@
     "\n",
     "    r = float('inf')\n",
     "    for k in range(1, N):\n",
-    "        diff = B[k] - A[k]\n",
-    "        summ = B[k] + A[k]\n",
-    "\n",
     "        r = min(\n",
     "            r, \n",
-    "            cur_min_diff - diff, \n",
-    "            summ - cur_max_summ)\n",
+    "            cur_min_diff - (B[k] - A[k]), \n",
+    "            (B[k] + A[k]) - cur_max_summ)\n",
     "\n",
-    "        cur_max_summ = max(cur_max_summ, summ)\n",
-    "        cur_min_diff = min(cur_min_diff, diff)\n",
+    "        cur_max_summ = max(cur_max_summ, B[k] + A[k])\n",
+    "        cur_min_diff = min(cur_min_diff, B[k] - A[k])\n",
     "\n",
     "    return r"
    ]
@@ -158,13 +167,6 @@
     "    print(bf(*t))\n",
     "    print(linear(*t))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
