--- a/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
+++ b/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
@@ -35,7 +35,7 @@
     "Given two arrays $A$ and $B$, both of size $n$.\n",
     "Array A is non-decreasing.\n",
     "\n",
-    "Find: $\\min_{0 \\leq i \\neq j < n}{\\left( B_i - B_j + \\left| A_i – A_j \\right| \\right)}$\n",
+    "$$ Find \\min_{0 \\leq i \\neq j < n}{\\left( B_i - B_j + \\left| A_i – A_j \\right| \\right)} $$\n",
     "\n",
     "`Tags: #google #phone_interview #linear #stock_price`"
    ],
@@ -72,15 +72,21 @@
     "\n",
     "### Idea\n",
     "\n",
-    "For `i < j`: $\n",
+    "For `i < j`:\n",
+    "\n",
+    "$$\n",
     "B_i - B_j + \\left| A_i – A_j \\right| \n",
     " = B_i - B_j + A_j – A_i \n",
-    " = (B_i - A_i) - (B_j - A_j)$\n",
+    " = (B_i - A_i) - (B_j - A_j)\n",
+    "$$\n",
     "\n",
-    "For `i > j`: $\n",
+    "For `i > j`: \n",
+    "\n",
+    "$$\n",
     "B_i - B_j + \\left| A_i – A_j \\right| \n",
     " = B_i - B_j + A_i – A_j\n",
-    " = (B_i + A_i) - (B_j + A_j)$\n",
+    " = (B_i + A_i) - (B_j + A_j)\n",
+    "$$\n",
     "\n",
     "For each $k$ we can choose which is better: treat $k$ as $i$ in the equation or as $j$ (in other words: left or right direction)\n",
     "\n",
@@ -100,7 +106,7 @@
     "\\right)}\n",
     "$$\n",
     "\n",
-    "And each $\\max_{0 \\leq j < k}{(B_j - A_j)}$ and $\\min_{0 \\leq i < k}{ (B_i + A_i) }$ can be calculated in $O(1)$ if we store their values from previous iteration $k-1$ and update by values from iteration $k$."
+    "And each internal $\\max_{0 \\leq j < k}(...)$ and $\\min_{0 \\leq i < k}(...)$ can be calculated in $O(1)$ if we store their values from previous iteration $k-1$ and update by values from iteration $k$."
    ],
    "cell_type": "markdown",
    "metadata": {}
