--- a/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
+++ b/interview/coding/stock_with_baseline/stock_with_baseline.ipynb
@@ -37,7 +37,12 @@
     "\n",
     "$$ Find \\min_{0 \\leq i \\neq j < n}{\\left( B_i - B_j + \\left| A_i – A_j \\right| \\right)} $$\n",
     "\n",
-    "`Tags: #google #phone_interview #linear #stock_price`"
+    "Tags: \n",
+    " - google\n",
+    " - phone interview\n",
+    " - linear search\n",
+    " - stock price\n",
+    " - minmax"
    ],
    "cell_type": "markdown",
    "metadata": {}
